Fix aligned images being oversized in FF and IE

--- a/extended/widgets/image.less
+++ b/extended/widgets/image.less
@@ -5,6 +5,11 @@
 .widget {
     &.image {
         .clearfix;
+
+        a {
+            float: none;
+        }
+
         span {
             &.image-title {
                 display: block;
